# neural-architect

./: .gitignore  GEMINI.md  project_completion.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/ai/agents/: document_agent.py  partner_agent.py
backend/app/ai/generators/: tis_generator.py
backend/app/ai/knowledge/: setup.py
backend/app/ai/models/: model_config.py
backend/app/ai/prompts/: document_prompts.py  system_prompts.py
backend/app/ai/tools/: canvas_tools.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  canvases.py  documents.py  files.py  knowledge.py  partner.py  projects.py  users.py
backend/app/api/v1/schemas/: auth.py  project.py  user.py
backend/app/core/: security.py
backend/app/crud/: base.py  canvas.py  chat.py  document.py  file.py  knowledge.py
backend/app/models/: __init__.py  canvas.py  chat.py  document.py  file.py  knowledge.py  project.py  user.py
backend/app/schemas/: canvas.py  chat.py  document.py  file.py  knowledge.py
backend/app/services/: canvas_service.py  document_service.py  project_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4d75947e67a6_add_new_tables.py  af64b1a71ffc_initial_migration.py
backend/scripts/: seed_knowledge.py  seed_rag.py
docker/: docker-compose.yml
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
project_information/: Document_generator.md  Partner.thinking.md  VISTORIA_PROJETO.md  agno.md  canvas_workspace.md  project_hub.md
(+59 files in other folders)
