[project]
name = "neural-architect-backend"
version = "0.1.0"
description = "Backend for Neural Architect - Cognitive Exoskeleton for ADHD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.2",
    "agno==2.3.13",
    "anthropic==0.75",
    "asyncpg==0.31.0",
    "celery==5.6.0",
    "crewai-tools==0.76.0",
    "email-validator",
    "fastapi==0.124.4",
    "httpx==0.28.1",
    "openai==2.12.0",
    "passlib[bcrypt]",
    "pydantic==2.12.5",
    "python-dotenv",
    "pyjwt",
    "python-multipart",
    "redis>=5.0.0",
    "sentry-sdk==2.47.0",
    "sqlalchemy==2.0.45",
    "uvicorn[standard]",
]

[dev-dependencies]
mypy = "1.18.1"
pytest = "9.0.2"
ruff = "0.14.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
